// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LGraph > matches previous snapshot > basicLGraph 1`] = `
LGraph {
  "_groups": [],
  "_input_nodes": undefined,
  "_last_trigger_time": undefined,
  "_links": Map {},
  "_nodes": [],
  "_nodes_by_id": {},
  "_nodes_executable": null,
  "_nodes_in_order": [],
  "_subgraph_node": undefined,
  "_version": -1,
  "catch_errors": true,
  "config": {},
  "elapsed_time": 0.01,
  "errors_in_execution": undefined,
  "execution_time": undefined,
  "execution_timer_id": undefined,
  "extra": {},
  "filter": undefined,
  "fixedtime": 0,
  "fixedtime_lapse": 0.01,
  "globaltime": 0,
  "inputs": {},
  "iteration": 0,
  "lastGroupId": -1,
  "last_link_id": 0,
  "last_node_id": 0,
  "last_reroute_id": undefined,
  "last_update_time": 0,
  "links": Map {},
  "list_of_graphcanvas": null,
  "nodes_actioning": [],
  "nodes_executedAction": [],
  "nodes_executing": [],
  "outputs": {},
  "runningtime": 0,
  "starttime": 0,
  "status": 1,
  "vars": {},
}
`;

exports[`LGraph > matches previous snapshot > minLGraph 1`] = `
LGraph {
  "_groups": [],
  "_input_nodes": undefined,
  "_last_trigger_time": undefined,
  "_links": Map {},
  "_nodes": [],
  "_nodes_by_id": {},
  "_nodes_executable": [],
  "_nodes_in_order": [],
  "_subgraph_node": undefined,
  "_version": 1,
  "catch_errors": true,
  "config": {},
  "elapsed_time": 0.01,
  "errors_in_execution": undefined,
  "execution_time": undefined,
  "execution_timer_id": undefined,
  "extra": {},
  "filter": undefined,
  "fixedtime": 0,
  "fixedtime_lapse": 0.01,
  "globaltime": 0,
  "inputs": {},
  "iteration": 0,
  "lastGroupId": -1,
  "last_link_id": 0,
  "last_node_id": 0,
  "last_reroute_id": undefined,
  "last_update_time": 0,
  "links": Map {},
  "list_of_graphcanvas": null,
  "newMethod": [Function],
  "nodes_actioning": [],
  "nodes_executedAction": [],
  "nodes_executing": [],
  "outputs": {},
  "runningtime": 0,
  "starttime": 0,
  "status": 1,
  "vars": {},
  "version": 1,
}
`;
